# masterplan-infiniteweave-monday-node-2025-0411

./: .coveragerc  .dockerignore  .env.example  .gitignore  @echo off.bat  AINDY_README.md  ARCHITECTURE_MAP.md  ARCHIVE_STATUS.md  Architecture_README_v1.md  BREAKING_CHANGES.md  Bridgeimport.py  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  MANIFEST.in  Makefile  Memory Event: The Day I Named the Agent.  Memory Event: The Statement of Collaborative Recognition  Memorybridgerecognitiontrace.py  Pasted text.txt  README.md  README_platform.md  README_v1.0.md  RippleTraceMVP  Summary.md  TECH_DEBT.md  Tuesday_Node_2025_0415.md  __init__.py  aindy_plugins.json  alembic.ini  batch.py  bridge.py  calculations.py  code_analysis.db  config.py  conftest.py  create_all.py  docker-compose.test.yml  docker-compose.yml  (+30 more)
AINDY/bridge/memory_bridge_rs/: BUILD.md  Cargo.toml  pyproject.toml  rebuild_native.ps1
aindy-apps-monolith/: .gitignore  README.md  aindy_plugins.json  pyproject.toml  pytest.ini
aindy-apps-monolith/.github/workflows/: app-ci.yml
aindy-apps-monolith/alembic/alembic/: env.py
aindy-apps-monolith/apps/: _bootstrap_validator.py  bootstrap.py
aindy-apps-monolith/apps/agent/: public.py
aindy-apps-monolith/apps/analytics/: __init__.py  calculation.py  metrics_models.py  user_score.py
aindy-apps-monolith/apps/arm/: __init__.py  memory_policy.py  models.py  syscalls.py
aindy-apps-monolith/apps/authorship/: bootstrap.py  models.py
aindy-apps-monolith/apps/automation/: automation_log.py  bootstrap.py  bridge_user_event.py  models.py  public.py
aindy-apps-monolith/apps/autonomy/: bootstrap.py
aindy-apps-monolith/apps/bridge/: bootstrap.py
aindy-apps-monolith/apps/freelance/: events.py
aindy-apps-monolith/apps/identity/: bootstrap.py  public.py
aindy-apps-monolith/apps/masterplan/: __init__.py  events.py  masterplan.py  models.py
aindy-apps-monolith/apps/rippletrace/: flow_strategy.py  public.py  ripple_edge.py  strategy.py  syscalls.py
aindy-apps-monolith/apps/search/: syscalls.py
aindy-apps-monolith/apps/social/: __init__.py  bootstrap.py
aindy-apps-monolith/apps/tasks/: adapters.py  events.py
aindy-apps-monolith/client/: .gitignore  eslint.config.js  package.json  platform.html  vite.config.ts
aindy-apps-monolith/client/e2e/: freelance-flow.spec.ts  genesis-flow.spec.ts  navigation.spec.ts  platform-access.spec.ts  tasks.spec.ts
aindy-apps-monolith/client/src/: api.js  vite-env.d.ts
aindy-apps-monolith/docs/apps/: AGENTICS.md  APPS_MONOLITH_REPO_SHAPE.md  CLIENT_OWNERSHIP.md  RUNTIME_DEPENDENCY.md
aindy-apps-monolith/docs/architecture/: ARCHITECTURE_MAP.md  BOOT_PROFILES.md  PLUGIN_REGISTRY_PATTERN.md
aindy-apps-monolith/docs/deployment/: MIGRATION_POLICY.md
aindy-apps-monolith/scripts/: check_api_contracts.py  check_app_imports.py  lint_docs.py
aindy-apps-monolith/tests/: __init__.py  conftest.py  test_bootstrap_completeness.py
aindy-apps-monolith/tests/fixtures/: client.py  db.py
aindy-apps-monolith/tests/helpers/: bootstrap.py  runtime.py
aindy-apps-monolith/tests/unit/: test_analytics_public_contract.py  test_app_manifest_bootstrap_contract.py  test_app_model_registration.py  test_import_boundaries.py  test_runtime_agent_api_ownership.py  test_tasks_public_contract.py
aindy-runtime/: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
aindy-runtime/.github/workflows/: runtime-ci.yml
aindy-runtime/AINDY/: config.py  deepseek_config.json  exception_handlers.py  grep.bat  main.py  routing.py  ruff.toml  runtime_only.py  runtime_plugins.json  startup.py  system_manifest.json
aindy-runtime/AINDY/agents/: agent_event_service.py  agent_runtime.py  autonomous_controller.py  runtime_api.py  stuck_run_service.py  tool_syscalls.py
aindy-runtime/AINDY/apscheduler/: __init__.py
aindy-runtime/AINDY/core/: execution_dispatcher.py  execution_guard.py  (+8 more)
aindy-runtime/tests/: __init__.py  conftest.py
sdk/: README.md  pyproject.toml
sdk/aindy/: __init__.py  client.py  events.py  execution.py  flow.py  memory.py  nodus.py  syscalls.py
sdk/examples/: quickstart.py
sdk/tests/: test_sdk.py
(+2145 files in other folders)
