[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aindy-apps-monolith"
version = "1.0.0"
description = "App monolith plugin pack for the AINDY runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "platform-team" }]
dependencies = [
  "aindy-runtime>=1.0,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]
namespaces = true
