[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aindy-runtime"
dynamic = ["version"]
description = "Installable AINDY runtime package"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "platform-team" }]
dependencies = [
  "alembic==1.17.0",
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "apscheduler==3.11.2",
  "bcrypt==4.0.1",
  "certifi==2025.10.5",
  "charset-normalizer==3.4.4",
  "click==8.3.0",
  "colorama==0.4.6",
  "distro==1.9.0",
  "dnspython==2.8.0",
  "fastapi==0.119.0",
  "fastapi-cache2==0.2.2",
  "greenlet==3.2.4",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.11",
  "jiter==0.11.1",
  "joblib==1.5.2",
  "Mako==1.3.10",
  "MarkupSafe==3.0.3",
  "nltk==3.9.2",
  "nodus-lang==1.1.0",
  "numpy==2.4.2",
  "openai==2.6.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "opentelemetry-sdk>=1.20.0",
  "passlib==1.7.4",
  "pendulum==3.1.0",
  "pgvector==0.4.2",
  "prometheus-fastapi-instrumentator>=6.1.0",
  "psycopg2==2.9.11",
  "pydantic==2.12.3",
  "pydantic-settings==2.11.0",
  "pydantic_core==2.41.4",
  "pymongo==4.16.0",
  "pyphen==0.17.2",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.1",
  "python-jose==3.5.0",
  "python-json-logger>=2.0.7",
  "redis==5.0.4",
  "regex==2025.9.18",
  "requests==2.32.5",
  "six==1.17.0",
  "slowapi==0.1.9",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.44",
  "starlette==0.48.0",
  "tenacity==9.1.4",
  "textstat==0.7.10",
  "tqdm==4.67.1",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzdata==2025.2",
  "tzlocal==5.3.1",
  "urllib3==2.5.0",
  "uvicorn==0.38.0",
]

[project.optional-dependencies]
test = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
]

[project.scripts]
aindy-runtime = "AINDY.runtime_only:main"
aindy-runtime-api = "AINDY.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "AINDY._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["AINDY*"]
exclude = ["AINDY.tests*"]
namespaces = true

[tool.setuptools.package-data]
"AINDY" = ["*.json"]
