[package]
name = "memory_bridge_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "memory_bridge_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

